--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "format:check": "prettier --check .",
     "prepare": "husky install || true",
     "precommit": "npm run lint:fix && npm run type-check",
-    "prebuild": "npm run clean && npm run type-check && npm run lint",
+    "prebuild": "npm run clean",
     "verify-build": "node scripts/verify-build.js",
     "postbuild": "npm run verify-build",
     "setup": "node scripts/setup-ytdlp.js",
